fix hero graphic padding on mobile

--- a/styles/partials/layout/hero/hero.scss
+++ b/styles/partials/layout/hero/hero.scss
@@ -29,6 +29,12 @@
     }
   }
 
+  &-graphic-section {
+    @include media('<=800px') {
+      padding-bottom: $unit*4;
+    }
+  }
+
   /**
    * mobile styles
    */
